[b]Version 0.6.3[/b]:

(2008-09-09)
 * For some unknown reason sometimes the playlist is not shown. I think this 
   is because it's outside of the screen. Now smplayer checks if the playlist 
   is actually outside of the screen, and in that case it's moved to pos 0x0.

(2008-09-08)
 * Moved the option "Create index if needed" from the section Performance to
   Advanced.
 * Added an icon for the audio equalizer action.

(2008-09-06)
 * Added a new option in Preferences->Performance: Threads for decoding.
   Sets the number of threads to use for decoding (for MPEG-1/2 and H.264 only).
   It could be useful for multicore processors.
 * Bugfix: the volume may be changed on startup even if the option "Change 
   volume on every file" was off. 

(2008-09-04)
 * Don't change the window size if the panel is already the requested size. 
   Seems to fix a problem when using Compiz.

(2008-09-01)
 * The option "Repaint background of the video window" (in Preferences->
   Advanced) is now enabled by default in linux. It seems with newer versions
   of Qt it works well with it. If you have problems with the video window
   going blank, just disable the option.
 * The single instance option is now disabled by default on Windows, as some 
   people reported smplayer didn't start with it.
 * 2nd try to make "gl:yuv=2:force-pbo:ati-hack" the default vo on Windows
   Vista.

(2008-08-28)
 * Set the frame counter to 0 when starting to play a file. Fixes bug
   #2080802.
 * Added in Preferences->Advanced an option to select the preferred network
   connection, IPv4 or IPv6. (IPv4 is the default)

(2008-08-26)
 * Added a new option for smplayer.ini: report_mplayer_crashes. If set to
   false, smplayer won't display the error dialog when mplayer crashes or
   fails to start.

(2008-08-25)
 * Added the Arabic translation, by Muhammad Nour Hajj Omar 
   <arabianheart@live.com>
 * Added some options in menu Play->Speed to increase/decrease the
   speed by 1% and 4%.